Trip-Based Public Transit Routing (#3184)